# py-auth0-2

./: .env.sample  .gitignore  README.md  pyproject.toml  requirements.txt  server.py
templates/: home.html  verify.html
