[tool.poetry]
name = "py-auth0-2"
version = "0.1.0"
description = ""
authors = ["Sean O'Connor <soconnor@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = ">=2.0.3"
python-dotenv = ">=0.19.2"
authlib = ">=1.0"
requests = ">=2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.6"
pycodestyle = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
